--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ h1, h2, h3, p, ul{
 }
 
 .header {
-    padding-bottom: 90px;
+    padding-bottom: 30px;
+    padding-top: 26px;
 }
 
 .header-div {
@@ -60,61 +61,6 @@ h1, h2, h3, p, ul{
     font-style: normal;
     font-weight: 400;
     line-height: 30px; /* 150% */
-    letter-spacing: 0.4px;
-}
-
-.text-list-home {
-    width: 64.8px;
-    color: #292F36;
-    font-family: Jost;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px; /* 157.895% */
-    letter-spacing: 0.4px;
-}
-
-.text-list-aboutus {
-    width: 96px;
-    color: #292F36;
-    font-family: Jost;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px; /* 157.895% */
-    letter-spacing: 0.4px;
-}
-
-.text-list-servisec {
-    width: 90px;
-    color: #292F36;
-    font-family: Jost;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px; /* 157.895% */
-    letter-spacing: 0.4px;
-}
-
-.text-list-pages {
-    width: 90px;
-    color: #292F36;
-    font-family: Jost;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px; /* 157.895% */
-    letter-spacing: 0.4px;
-}
-
-.text-list-contact {
-    width: 116.4px;
-    color: #292F36;
-    font-family: Jost;
-    font-size: 19px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px; /* 157.895% */
     letter-spacing: 0.4px;
 }
 
@@ -189,15 +135,14 @@ h1, h2, h3, p, ul{
 .interno-list {
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 
 
 .box-text {
-    margin-left: 153px;
+    margin-left: 113px;
     margin-top: 75px;
-    margin-right: 153px;
+    margin-right: 113px;
     width: 174px;
     color: #292F36;
     text-align: center;
@@ -212,8 +157,8 @@ h1, h2, h3, p, ul{
 .text-describ {
     margin-top: 17px;
     margin-bottom: 68px;
-    margin-left: 82px;
-    margin-right: 82px;
+    margin-left: 42px;
+    margin-right: 42px;
     width: 317px;
     color: #4D5053;
     text-align: center;
@@ -227,7 +172,7 @@ h1, h2, h3, p, ul{
 
 
 .button-box {
-    margin-bottom: 70px;
+    margin-bottom: 103px;
     display: flex;
     align-items: center;
     color: #4D5053;
@@ -241,14 +186,14 @@ h1, h2, h3, p, ul{
     line-height: 27px; /* 150% */
     letter-spacing: 0.36px;
     display: flex;
-    margin-left: 178px;
-    margin-right: 178px;
+    margin-left: 138px;
+    margin-right: 138px;
 }
 
 .box-texting {
-    margin-left: 185px;
+    margin-left: 145px;
     margin-top: 75px;
-    margin-right: 185px;
+    margin-right: 145px;
     width: 111px;
     color: #292F36;
     text-align: center;
@@ -264,8 +209,8 @@ h1, h2, h3, p, ul{
 .text-describing {
     margin-top: 17px;
     margin-bottom: 35px;
-    margin-left: 92px;
-    margin-right: 92px;
+    margin-left: 52px;
+    margin-right: 52px;
     width: 297px;
     color: #4D5053;
     text-align: center;
@@ -278,9 +223,9 @@ h1, h2, h3, p, ul{
 }
 
 .box-texts {
-    margin-left: 191px;
+    margin-left: 151px;
     margin-top: 75px;
-    margin-right: 191px;
+    margin-right: 151px;
     width: 98px;
     color: #292F36;
     text-align: center;
@@ -296,8 +241,8 @@ h1, h2, h3, p, ul{
 .text-describs {
     margin-top: 17px;
     margin-bottom: 35px;
-    margin-left: 92px;
-    margin-right: 92px;
+    margin-left: 52px;
+    margin-right: 52px;
     width: 297px;
     color: #4D5053;
     text-align: center;
@@ -311,17 +256,21 @@ h1, h2, h3, p, ul{
 
 .section-mode {
     padding-top: 99px;
-    padding-bottom: 99px;
-    background-image: url(../img/kitchenback.png);
-    background-repeat: no-repeat;
-    background-position: right
+    padding-bottom: 140px;
 }
 
+.mode-list {
+    margin-right: 77px;
+}
+
+.flexing {
+    display: flex;
+}
 
 .mode-text {
     margin-top: 40px;
     margin-bottom: 42px;
-    width: 540px;
+    width: 450px;
     color: #292F36;
     font-family: "DM Serif Display";
     font-size: 50px;
@@ -332,7 +281,7 @@ h1, h2, h3, p, ul{
 }
 
 .text-mode-describrion {
-    width: 637.2px;
+    width: 531px;
     color: #4D5053;
     font-family: Jost;
     font-size: 22px;
@@ -343,7 +292,7 @@ h1, h2, h3, p, ul{
 }
 
 .text {
-    width: 590.4px;
+    width: 492px;
     color: #4D5053;
     font-family: Jost;
     font-size: 22px;
@@ -364,8 +313,8 @@ h1, h2, h3, p, ul{
     border: none;
     padding-top: 29px;
     padding-bottom: 30px;
-    padding-left: 39px;
-    padding-right: 39px;
+    padding-left: 30px;
+    padding-right: 30px;
     border-radius: 100px;
     background: #F4F0EC;
 }
@@ -395,13 +344,13 @@ h1, h2, h3, p, ul{
 .button-free {
     margin-bottom: 37px;
     margin-top: 50px;
-    background-image: url(../img/btnimage.png);
+    background-image: url(../img/buttin.png);
     display: flex;
     align-items: center;
     padding-top: 21px;
     padding-bottom: 23px;
     padding-left: 40px;
-    padding-right: 130px;
+    padding-right: 77.1px;
     color: #FFF;
     font-family: Jost;
     font-size: 18px;
@@ -413,9 +362,16 @@ h1, h2, h3, p, ul{
 }
 
 .section-people{
+    flex-shrink: 0;
+    border-radius: 70px;
+}
+
+.wraping {
+    width: 1230px;
+    height: 675px;
+    flex-shrink: 0;
     border-radius: 70px;
     background: #F4F0EC;
-    padding-bottom: 121px;
 }
 
 .people-head {
@@ -441,27 +397,20 @@ h1, h2, h3, p, ul{
     letter-spacing: 0.22px;
 }
 
-.conteiner {
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 10px;
-    padding-right: 10px;
-    width: 1337px;
-}
 
 .people-list {
     display: flex;
     margin-top: 100px;
-    gap: 22px;
+    gap: 18px;
+    margin-left: 51px;
+    margin-right: 51px;
 }
 
 .wrapper {
     padding-top: 50px;
-    padding-left: 42px;
-    padding-right: 94px;
+    padding-left: 35px;
+    padding-right: 30px;
     padding-bottom: 45px;
-    width: 424.8px;
-    height: 287px;
     flex-shrink: 0;
     border-radius: 30px;
     background: #FFF;
@@ -546,4 +495,325 @@ h1, h2, h3, p, ul{
 .nature {
     margin-left: 89px;
     margin-right: 112px;
+}
+
+.section-project {
+    padding-top: 15px;
+}
+
+.project-text {
+    margin-bottom: 20px;
+    color: #292F36;
+    text-align: center;
+    font-family: "DM Serif Display";
+    font-size: 47px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 62.4px; /* 132.766% */
+    letter-spacing: 0.22px;
+}
+
+.project-caption {
+    color: #4D5053;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.text-project {
+    color: #4D5053;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+
+.section-model {
+    padding-top: 70px;
+    padding-bottom: 160px;
+}
+
+.section-art {
+    display: flex;
+    gap: 20px;
+}
+
+.section-arting {
+    display: flex;
+    gap: 20px;
+    margin-top: 70px;
+}
+
+.box-wrap {
+    padding-top: 25px;
+    display: flex;
+}
+
+.list-variant {
+    width: 325.8px;
+    color: #292F36;
+    font-family: "DM Serif Display";
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 37.5px; /* 156.25% */
+    letter-spacing: 0.22px;
+}
+
+.list-art {
+    width: 136.8px;
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.button-art {
+    margin-left: 195px;
+    border-radius: 100px;
+    background: #F4F0EC;
+    border: none;
+    padding-top: 27px;
+    padding-bottom: 27px;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.section-number {
+    background: #F4F0EC;
+    padding-top: 140px;
+    padding-bottom: 140px;
+}
+
+.list-number {
+    display: flex;
+    justify-content: space-between;
+}
+
+.number-li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 14px;
+    padding-bottom: 10px;
+    border-right: 2px solid #CDA274;;
+}
+
+.number-li:first-child {
+    padding-left: 33px;
+    padding-right: 55px;
+}
+
+.number-li:nth-child(2){
+    padding-left: 57px;
+    padding-right: 78px;
+}
+
+.number-li:nth-child(3) {
+    padding-left: 65px;
+    padding-right: 86px;
+}
+
+.number-li:last-child {
+    padding-left: 47px;
+    padding-right: 67px;
+    border-right: 0px solid;
+}
+
+.number-cost {
+    margin-bottom: 10px;
+    color: #CDA274;
+    text-align: center;
+    font-family: "DM Serif Display";
+    font-size: 85px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 127.5px; /* 150% */
+    letter-spacing: 1.7px;
+}
+
+
+.number-name {
+    color: #4D5053;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.section-blogs {
+    padding-top: 99px;
+    padding-bottom: 70px;
+}
+
+.text-blogs {
+    color: #292F36;
+    text-align: center;
+    font-family: "DM Serif Display";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 62.4px; /* 130% */
+    letter-spacing: 0.22px;
+    margin-bottom: 21px;
+    padding-top: 15px;
+}
+
+.trends-text {
+    color: #4D5053;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.text-design {
+    color: #4D5053;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.section-kitchen {
+    padding-bottom: 140px;
+}
+
+.list {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    display: flex;
+}
+
+.list-card {
+    width: 387px;
+    flex-shrink: 0;
+    border-radius: 62px;
+    border: 1px solid #E7E7E7;
+    padding-top: 21px;
+    padding-left: 21px;
+    padding-right: 21px;
+    padding-bottom: 40px;
+}
+
+.list-top {
+    margin-top: 40px;
+}
+
+.head-interier {
+    margin-top: 15px;
+    margin-bottom: 10px;
+    width: 334px;
+    color: #292F36;
+    font-family: "DM Serif Display";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 35px; /* 140% */
+    letter-spacing: 0.5px;
+}
+
+.head-interier:nth-child(2) {
+    width: 338px;
+}
+
+.wrap-number {
+    display: flex;
+    align-items: center;
+    gap: 149px;
+}
+
+.number-months {
+    width: 144.8px;
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.button-continue {
+    border-radius: 100px;
+    background: #F4F0EC;
+    padding: 18px 21px;
+    border: none;
+}
+.wraping-info {
+    text-align: center;
+    width: 1200px;
+    height: 414px;
+    flex-shrink: 0;
+    border-radius: 70px;
+    background: #292F36;
+    padding-top: 100px;
+    padding-bottom: 95px;
+}
+
+.text-info {
+    color: #FFF;
+    text-align: center;
+    font-family: "DM Serif Display";
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 75px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+
+.text-contactecst {
+    margin-top: 9px;
+    margin-bottom: 31px;
+    color: #FFF;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.button-connect {
+    border: none;
+    padding-top: 21px;
+    padding-bottom: 23px;
+    padding-left: 34px;
+    padding-right: 67px;
+    color: #FFF;
+    text-align: center;
+    font-family: Jost;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 27px; /* 150% */
+    letter-spacing: 0.22px;
+    background-image: url(../img/orangebutton.png);
+    background-position: center;
+    border-radius: 12px;
 }
