--- a/css/style.css
+++ b/css/style.css
@@ -817,3 +817,107 @@ h1, h2, h3, p, ul{
     background-position: center;
     border-radius: 12px;
 }
+
+.footer {
+    padding-top: 130px;
+    padding-bottom: 80px;
+}
+
+.text-footer {
+    margin-top: 15px;
+    width: 326px;
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.footer-img {
+    display: flex;
+    gap: 40px;
+    margin-top: 31px;
+}
+
+.footer-contact {
+    display: flex;
+}
+
+.list-pages {
+    display: flex;
+}
+
+.item {
+    margin-left: 83px;
+}
+
+.item-list {
+    margin-left: 113px;
+}
+
+.list-last {
+    margin-left: 109px;
+}
+
+.pages {
+    margin-bottom: 21px;
+    color: #292F36;
+    font-family: "DM Serif Display";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 37.5px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.wrap-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+}
+
+.link {
+    color: #4D5053;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.section-last {
+    border-top: 2px solid #E5E5E5;
+    padding-top: 35px;
+    padding-bottom: 35px;
+}
+
+.list-copy {
+    display: flex;
+    justify-content: center;
+}
+
+.p{
+    color: #4D5053;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
+
+.b {
+    color: #CDA274;
+    text-align: center;
+    font-family: Jost;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 33px; /* 150% */
+    letter-spacing: 0.22px;
+}
